# quant-analyzer

./: pyproject.toml
src/: main.py
src/adapters/inbound/: console_runner.py
src/adapters/outbound/: csv_result_persistence.py  excel_data_source.py  excel_result_persistence.py  toml_starategy_loader.py
src/domain/model/: criteria.py  data_models.py
src/domain/model/criteria/: criteria.py  qoq_criteria.py
src/domain/ports/: inbound.py  outbound.py
src/domain/service/: screening_service.py
strategies/active/: op_qoq_100pct_growth_23q1_q2.toml  op_qoq_growth_23q1_q2.toml  op_qoq_turnaround_23q1_q2.toml
